// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapseAllButton renders per snapshot with allCardsCollapsed false 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    class="fui-Button r1alrhcs expandCollapseAllButton ___eduuxo0_1tclg4b f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3"
    type="button"
  >
    <span
      class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
    >
      <svg
        aria-hidden="true"
        class="chevronDownRegular ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Collapse all
  </button>
</DocumentFragment>
`;

exports[`ExpandCollapseAllButton renders per snapshot with allCardsCollapsed true 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-label="Expand all rules to show failed instances."
    class="fui-Button r1alrhcs expandCollapseAllButton ___eduuxo0_1tclg4b f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3"
    type="button"
  >
    <span
      class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
    >
      <svg
        aria-hidden="true"
        class="chevronRightRegular ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Expand all
  </button>
</DocumentFragment>
`;
